--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: A-notched-gun_74023
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74023-h/images/cover.jpg
 creator:
   author:
     agent_name: Coburn, Walt
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/53037
     wikipedia: https://en.wikipedia.org/wiki/Walt_Coburn
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74023#A-notched-gun
 gutenberg_issued: '2024-07-12'
 gutenberg_type: Text
 identifiers:
